namespace LAGS
{
    public static class RatAnimationParameters
    {
        public const string IsKockout = "IsKockout";
        public const string Recover = "Recover";
        public const string IsMoving = "IsMoving";
        public const string MoveX = "MoveX";
        public const string MoveY = "MoveY";
    }
}
